# AWEngine_Packet

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
lib/: CMakeLists.txt
src/: portable_endian.h  stack_info.hpp
src/AWEngine/: GameClient.cpp  GameClient.hpp  GameClient_StatusRequest.cpp  PacketClient.cpp  PacketClient.hpp  PacketClient_StatusRequest.cpp  PacketServer.cpp  PacketServer.hpp  TcpClient.cpp  TcpClient.hpp  TcpServer.cpp  TcpServer.hpp
src/AWEngine/Packet/: Direction.hpp  IPacket.cpp  IPacket.hpp  PacketBuffer.cpp  PacketBuffer.hpp  PacketClient.cpp  PacketClient.hpp  PacketClient_StatusRequest.cpp  PacketFlags.hpp  PacketServer.cpp  PacketServer.hpp  PacketWrapper.hpp  PacketWrapper_Read.cpp  PacketWrapper_Write.cpp  Ping.hpp  ProtocolGameName.hpp  ProtocolInfo.cpp  ProtocolInfo.hpp  TcpClient.hpp  TcpServer.hpp
src/AWEngine/Packet/ToClient/: Kick.hpp  Ping.hpp
src/AWEngine/Packet/ToClient/Login/: ServerInfo.cpp  ServerInfo.hpp
src/AWEngine/Packet/ToServer/: Disconnect.hpp  Pong.hpp
src/AWEngine/Packet/ToServer/Login/: Init.hpp
src/AWEngine/Packet/Util/: Connection.cpp  Connection.hpp  Core_Packet.hpp  DNS.hpp  LocaleDoubleChar.hpp  LocaleInfo.cpp  LocaleInfo.hpp  ThreadSafeQueue.h  ThreadSafeQueue.hpp
src/AWEngine/Util/: Asio.hpp  Core.hpp  Core_Packet.hpp  DNS.hpp  ThreadSafeQueue.h
tests/: CMakeLists.txt
tests/buffer/: CMakeLists.txt  main.cpp
tests/test/: CMakeLists.txt  main.cpp
